--- a/style.sass
+++ b/style.sass
@@ -42,6 +42,7 @@ p
 .Show__Image
     width: $width 
     height: 100%
+    max-width: 150px
     display: inline-flex
     justify-content: center
     align-items: center
